@@ -99,6 +99,8 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+  HCAT-197. data generator for e2e assumes hadoop tarball installation (arpitgupta via khorgath)  
+
   HCAT-199. HCatOutputCommitter::cleanupJob() fails : Unable to connect to metastore. (mithun via khorgath)
 
   HCAT-197. data generator for e2e assumes hadoop tarball installation (arpitgupta via hashutosh)  
